layouts for extention on lab page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,53 @@
 
   <body>
 
-    <h1>Hello, World</h1>
+    <h1>Blackout Cake</h1>
+
+    <div class="flexbox-grid">
+      <div class="column">
+        <p><b>Bake Time:</b> 3hrs, plus chilling</p>
+        <p><b>Rating:</b> ⭐️⭐️⭐️⭐️ (1896 reviews)</p>
+
+        <h2>[Ingredients]</h2>
+
+        <h4>For the Cake</h4>
+        <ul>
+          <li>1/2 cup unsweetened Dutch-process cocoa</li>
+          <li>1/4 cup boiling water</li>
+          <li>2 ounces unsweetened chocolate, chopped</li>
+          <li>3/4 cup milk</li>
+          <li>2 cups sugar</li>
+          <li>2 sticks unsalted butter, slightly softened</li>
+        </ul>
+      </div>
+      <div class="column" id="col-1">
+        <img src="assets/blackout_cake.jpeg" >
+      </div>
+
+      
+
+    </div>
+<!-- 
+    <img src="assets/blackout_cake.jpeg" width="25%">
+
+    <p><b>Bake Time:</b> 3hrs, plus chilling</p>
+    <p><b>Rating:</b> ⭐️⭐️⭐️⭐️ (1896 reviews)</p> -->
+
+    <!-- <h2>[Ingredients]</h2>
+
+    <h4>For the Cake</h4>
+    <ul>
+      <li>1/2 cup unsweetened Dutch-process cocoa</li>
+      <li>1/4 cup boiling water</li>
+      <li>2 ounces unsweetened chocolate, chopped</li>
+      <li>3/4 cup milk</li>
+      <li>2 cups sugar</li>
+      <li>2 sticks unsalted butter, slightly softened</li>
+    </ul> -->
+
+
+
+
 
 
 
